--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>AudreyHasBigBum</title>
+  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+
 </head>
 <body>
   <app-root></app-root>
